--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -3975,10 +3975,10 @@
  </details>
                </li>
 	<li><h3 class="h4">Determine the amount of federal income tax to deduct</h3> 
-<p>Use the calculation depending on the province of employment of the employee:</p>
+<p>Use the following calculation depending on the province of employment of your employee:</p>
 
   <details>
-                              <summary>Calculation - Employee's province of employment other than Quebec</summary>
+                              <summary><strong>Other than</strong> Quebec</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4103,7 +4103,7 @@
 </details>
 
 <details class="mrgn-bttm-md">
-                              <summary>Calculation - Employee's province of employment is Quebec</summary>
+                              <summary>Quebec</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4260,11 +4260,11 @@
 </li> 
 <li><h3 class="h4">Determine the amount of provincial or territorial income tax to deduct</h3> 
 
-<p>Use the calculation depending on the province of employment of the employee:</p>
-<p><span class="fas fa-ban text-danger fa-lg"></span> If your employee's <strong>province of employment is Quebec</strong> continue to step 4.</p>
+<p>Use the following calculation depending on the province of employment of your employee:</p>
+<p>Continue to <a href="#step4">step 4</a> if your employee's province of employment is <strong>Quebec</strong>.</p>
 
  <details>
-                              <summary>Calculation - Employee's province of employment other than Alberta, British Columbia, Ontario, and PEI</summary>
+                              <summary><strong>Other than</strong> Alberta, British Columbia, Ontario, PEI and Quebec</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4386,7 +4386,7 @@
 </details>
 
  <details>
-                              <summary>Calculation - Employee's province of employment is Alberta</summary>
+                              <summary>Alberta</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4435,7 +4435,7 @@
 </details>
 
  <details>
-                              <summary>Calculation - Employee's province of employment is British Columbia</summary>
+                              <summary>British Columbia</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4519,7 +4519,7 @@
 
 
  <details>
-                              <summary>Calculation - Employee's province of employment is Ontario</summary>
+                              <summary>Ontario</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4628,7 +4628,7 @@
 </details>
 
  <details class="mrgn-bttm-md">
-                              <summary>Calculation - Employee's province of employment is Prince Edward Island</summary>
+                              <summary>Prince Edward Island</summary>
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
@@ -4709,7 +4709,7 @@
 
 </li> 
 
-	<li><h3 class="h4">Calculate the amount of income tax you have to remit and withhold</h3>
+	<li><h3 class="h4" id="step4">Calculate the amount of income tax you have to remit and withhold</h3>
 
 <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                               <li><span class="fa-stack text-success">
