--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -208,8 +208,8 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
   
  <li class="cnjnctn-col">
- <p>   <span class="fas fa-ban text-danger fa-lg"> </span> If your employee checked this box, <strong>do not deduct</strong> any federal or provincial tax.  </p>
- <p><strong>Do not</strong> use the tax tables. </p></li>
+ <p><span class="fas fa-ban text-danger fa-lg"> </span><strong>Do not</strong> continue to next step or use the tax tables if your employee checked this box.</p>
+<p>You <strong>do not deduct</strong> any federal or provincial tax in this situation.</p>
  <li class="cnjnctn-col">
     <span class="fas fa-arrow-down text-success fa-lg"> </span> Continue to next step if your employee checked this box but <strong>you believe it is a false statement</strong>.</li>
  <li class="cnjnctn-col">
