--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -611,7 +611,8 @@
 
 <ol class="lst-stps stps-strpd">
 <li>
-	<h4>Calculate the amount of insurable earnings for the period of employment</h4>      
+	<h4>Calculate the amount of insurable earnings for the period of employment</h4>     
+	<p>The following calculation <strong>must</strong> include <strong>only</strong> insurable earnings in their <strong>employment with you</strong>:</p>
        <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                              <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -678,12 +679,12 @@
           <p>Use one of the following amount that applies to your situation:</p>
           <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-md">
 <li class="cnjnctn-col">
-  <p> <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 1 is less</strong> than <a href="#ei-prem" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #eirate", "class": "hidden"}, {"action": "removeClass", "source": "#tb1>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#tb1>tbody>tr>td:nth-child(1), #tb1>tbody>tr>td:nth-child(2)", "class": "info"}]'>Maximum annual insurable earnings&nbsp;<span class="far fa-question-circle"></span></a>, <strong>use this amount</strong>.</p>
- <p>The amount from step 1 must include only pensionable earnings in their employment with you.</p></li>
+  <p> If the amount in <strong>step 1 is less</strong> than <a href="#ei-prem" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #eirate", "class": "hidden"}, {"action": "removeClass", "source": "#tb1>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#tb1>tbody>tr>td:nth-child(1), #tb1>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum annual insurable earnings&nbsp;<span class="far fa-question-circle"></span></a>, <strong>use the amount calculated in step 1</strong>.</p>
+ </li>
  
   <li class="cnjnctn-col">
-  <p>  <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 1 is greater</strong> than <a href="#ei-prem" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #eirate", "class": "hidden"}, {"action": "removeClass", "source": "#tb1>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#tb1>tbody>tr>td:nth-child(1), #tb1>tbody>tr>td:nth-child(2)", "class": "info"}]'>Maximum annual insurable earnings&nbsp;<span class="far fa-question-circle"></span></a>, <strong>use the maximum insurable earnings</strong>.</p>
-<p>The amount from step 1 must include only insurable earnings in their employment with you.</p></li>
+  <p>  If the amount in <strong>step 1 is greater</strong> than <a href="#ei-prem" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #eirate", "class": "hidden"}, {"action": "removeClass", "source": "#tb1>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#tb1>tbody>tr>td:nth-child(1), #tb1>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum annual insurable earnings&nbsp;<span class="far fa-question-circle"></span></a>, <strong>use the maximum annual insurable earnings</strong>.</p>
+</li>
  
 </ul>
                                  
