--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -295,10 +295,10 @@
                 
  <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-md">
 <li class="cnjnctn-col">
-   <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 5 is less</strong> than step 2, <strong>withhold the amount from step 5</strong>.</li>
+   If the amount in <strong>step 5 is less</strong> than step 2, <strong>withhold the amount from step 5</strong>.</li>
  
   <li class="cnjnctn-col">
-    <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 5 is greater</strong> than step 2, <strong>withhold the amount from step 2</strong>.</li>
+If the amount in <strong>step 5 is greater</strong> than step 2, <strong>withhold the amount from step 2</strong>.</li>
  
 </ul>
 
@@ -517,10 +517,10 @@
          <p>Use one of the following amount that applies to your situation:</p>
           <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-md">
    <li class="cnjnctn-col">
-   <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 3 is less</strong> than step 1, <strong>withhold the amount from step 3</strong>.</li>
+    If the amount in <strong>step 3 is less</strong> than step 1, <strong>withhold the amount from step 3</strong>.</li>
 
 		   <li class="cnjnctn-col">
-    <span class="fas fa-calculator text-muted fa-lg"> </span> If the amount in <strong>step 3 is greater</strong> than step 1, <strong>withhold the amount from step 1</strong>.</li>
+    If the amount in <strong>step 3 is greater</strong> than step 1, <strong>withhold the amount from step 1</strong>.</li>
 
           </ul>
   </li>
