--- a/payroll/calculate/how/ei.html
+++ b/payroll/calculate/how/ei.html
@@ -173,7 +173,7 @@
                   <h4>Determine if your employee reached the maximum premiums</h4>
 <div id="ajax-detmax">
 
-<p>You <strong>must</strong> withhold EI premiums until your employee reaches the maximum without taking into account deductions made by another employer.</p>
+<p>You <strong>must</strong> withhold EI premiums until your employee reaches the maximum <strong>without</strong> taking into account deductions made by another employer.</p>
  
               <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
@@ -679,7 +679,7 @@ If the amount in <strong>step 5 is greater</strong> than step 2, <strong>withhol
           <p>Use one of the following amount that applies to your situation:</p>
           <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-md">
 <li class="cnjnctn-col">
-  <p> If the amount in <strong>step 1 is less</strong> than <a href="#ei-prem" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #eirate", "class": "hidden"}, {"action": "removeClass", "source": "#tb1>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#tb1>tbody>tr>td:nth-child(1), #tb1>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum annual insurable earnings&nbsp;<span class="far fa-question-circle"></span></a>, <strong>use the amount calculated in step 1</strong>.</p>
+  <p> If the amount in <strong>step 1 is less</strong> than <a href="#ei-prem" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #eirate", "class": "hidden"}, {"action": "removeClass", "source": "#tb1>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#tb1>tbody>tr>td:nth-child(1), #tb1>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum annual insurable earnings&nbsp;<span class="far fa-question-circle"></span></a>, <strong>use the amount from step 1</strong>.</p>
  </li>
  
   <li class="cnjnctn-col">
