--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -2946,8 +2946,8 @@
 <p>The calculation depends on the frequency of the bonus or irregular payments for the year. If your employee's bonus or irregular payment is:</p> 
   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
               
-               <li class="cnjnctn-col">  <span class="fas fa-arrow-down text-success fa-li fa-lg"> </span> <strong>One and first bonus or irregular payment</strong>, continue to <a href="#12a">step 10a and <a href="#12c">10c</a>.</li>
-               <li class="cnjnctn-col"> <span class="fas fa-arrow-down text-success fa-li fa-lg"> </span>  <strong>More than one bonus or irregular payment</strong>, continue to <a href="#12a">step 10a</a> and <a href="#12b">10b</a>.</li>
+               <li class="cnjnctn-col"><strong>One and first bonus or irregular payment</strong>, continue to <a href="#12a">step 10a and <a href="#12c">10c</a>.</li>
+               <li class="cnjnctn-col"><strong>More than one bonus or irregular payment</strong>, continue to <a href="#12a">step 10a</a> and <a href="#12b">10b</a>.</li>
                
             </ul>
 <ol class="lst-stps-sub">
