--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -3500,7 +3500,9 @@
 <p>If the recipient believes that they will have to pay more tax on their yearly income tax and benefit return than the amount from step 4, they can request a different tax calculation on the lump-sum payment. Continue to step 5a if they request it. </p>
 <ol class="lst-stps-sub">
 <li><h4>Determine the annual tax to be deducted from the recipient’s yearly remuneration including the lump sum payment</h4>
-<p>You need to calculate the recipient’s annual tax on their annual remuneration <strong>including the lump-sum payment</strong>. Continue to <a href="#tab-mnl">Any payments (manual calculation)</a> using steps 1, 2, 3 and 4. On step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
+<p>You need to calculate the recipient’s annual tax on their annual remuneration <strong>including the lump-sum payment</strong>. </p>
+<p>Continue to <a href="#tab-mnl">Any payments (manual calculation)</a> using steps 1, 2, 3 and 4. </p>
+<p>From step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
  <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 <p>Joseph receives a weekly salary of $500 and $50 in taxable benefits per pay period. He received a $2,500 lump-sum payment in April 2023. The lump-sum payment was determined to not be pensionable or insurable. His province of employment is Manitoba. He requested the optional calculation for tax on his lump-sum payment. His employer began the calculation by determining Joseph’s annual tax including the lump sum payment. </p>
@@ -3735,7 +3737,9 @@
 </details>
 </li>
 <li><h4>Determine the annual tax to be deducted from the recipient’s yearly remuneration not including the lump-sum payment</h4>
-<p>You need to calculate the recipient’s annual tax on their annual remuneration <strong>not including the lump-sum payment</strong>. Continue to <a href="#tab-mnl">Any payments (manual calculation)</a> using steps 1, 2, 3 and 4. On step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
+<p>You need to calculate the recipient’s annual tax on their annual remuneration <strong>not including the lump-sum payment</strong>.</p>
+<p>Continue to <a href="#tab-mnl">Any payments (manual calculation)</a> using steps 1, 2, 3 and 4. 
+<p>From step 4, you only need to get the result: This is the total amount you have to withhold and remit: federal, provincial and territorial income tax.</p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 
