--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -208,7 +208,7 @@
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
                                  </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings for the year to date
-<details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
+  <div id="ajax-defnon"><details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
 				<p>Non-pensionable earnings are:</p>
 					<ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 
@@ -218,7 +218,7 @@
 				<li>Received before and including the month where the employee provided you a completed and signed Form CPT30 to start contributing to the CPP</li>
 				<li>Received while the employee is considered to be disabled under the CPP2 or QPP2</li>
 				<li>From employment, benefits, and payments from which you do not deduct CPP2</li>
-				</ul></details></span>
+				</ul></details></div></span>
           
                               </li>
 
@@ -923,17 +923,7 @@
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
                                  </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings 
-<details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
-				<p>Non-pensionable earnings are:</p>
-					<ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
-
-				<li>Received before and including the month they turned 18</li>
-				<li>Received after the month they turned 70</li>
-				<li>Received after the effective date of their completed and signed Form CPT30 to elect to stop contributing to the CPP</li>
-				<li>Received before and including the month where the employee provided you a completed and signed Form CPT30 to start contributing to the CPP</li>
-				<li>Received while the employee is considered to be disabled under the CPP2 or QPP2</li>
-				<li>From employment, benefits, and payments from which you do not deduct CPP2</li>
-				</ul></details></span>
+		<div data-ajax-replace="#ajax-defnon"></div> </span>
           
                               </li>
 
