--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -1015,7 +1015,9 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Total earnings that do not require CPP contributions</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings
+				      <div data-ajax-replace="#ajax-defnon"></div>
+				      </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -1222,7 +1224,7 @@
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
                                  </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings 
-				<details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
+				  <div id="ajax-defnon"><details class="mrgn-bttm-md"><summary>What are non-pensionable earnings</summary>
 				<p>Non-pensionable earnings are:</p>
 					<ul class="mrgn-lft-lg lst-spcd mrgn-bttm-md">
 				<li>Received before and including the month they turned 18</li>
@@ -1232,7 +1234,7 @@
 				<li>Received while the employee is considered to be disabled under the CPP or QPP</li>
 				<li>From employment, benefits, and payments from which you do not deduct CPP</li>
 				</ul>
-				</details>
+				</details></div>
 				</span>
           
                               </li>
