--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -729,7 +729,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Total earnings for the pay period that do not require CPP contributions</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s non-pensionable earnings for the pay period</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
