--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -237,11 +237,13 @@
             </div>
             <section class="mrgn-tp-md" id="details-elements">
 			<details><summary> Year </summary>
-<p>Enter the 4 digits of the calendar year for which you are preparing the T4A-RCA slip.</p>
+<p>Enter the 4 digits of the calendar year in which you paid the recipient.</p>
 </details>
 
 <details><summary>Box 12 &ndash; Refund to employer</summary>
-<p>Report the amount, if any, that the RCA trust refunded to a participating employer which is required to be included in their income under paragraph 12(1)(n.3). Include a transfer of funds from this RCA trust (the <strong>transferring plan</strong>) to another RCA trust (the <strong>receiving plan</strong>) if the custodian of the receiving plan is a non-resident, or if the receiving plan is a foreign plan that is considered by subsection 207.6(5) to be an RCA for Canadian residents participating in the plan.</p>
+<p>Report the amount, if any, that the RCA trust refunded to a participating employer which is required to be included in their income under paragraph 12(1)(n.3). </p>
+
+<p>Include a transfer of funds from this RCA trust (the <strong>transferring plan</strong>) to another RCA trust (the <strong>receiving plan</strong>) if the custodian of the receiving plan is a non-resident, or if the receiving plan is a foreign plan that is considered by subsection 207.6(5) to be an RCA for Canadian residents participating in the plan.</p>
 <p><strong>Do not </strong>include in box 12 any transfer of funds made <strong>directly </strong>from a transferring plan to a receiving plan if the custodian of the receiving plan is <strong>not </strong>a non-resident <strong>and </strong>the receiving plan is <strong>not </strong>a foreign plan that is considered by subsection 207.6(5) to be an RCA for Canadian residents participating in the plan.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4041/retirement-compensation-arrangements-guide.html#P591_62953">Transferring amounts between RCA trusts</a></p>
 </details>
@@ -258,19 +260,19 @@
 <details><summary>Box 17 &ndash; Distributions eligible for pension income splitting</summary>
 <p>Report the amount included in box 16 consisting of payments made in the year to the individual out of or under an RCA that:</p>
 
-<ul>
-<li>Are in respect of a life annuity that is attributable to periods of employment for which benefits are also provided to the individual under a RPP     </li>
-<li>Provide benefits that supplement the benefits provided under a registered pension plan (other than an individual pension plan for the purposes of Part LXXXIII of the Income Tax Regulations) </li>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Are in respect of a life annuity that is attributable to periods of employment for which benefits are also provided to the individual under a RPP     </li>
+<li class="cnjnctn-col">Provide benefits that supplement the benefits provided under a registered pension plan (other than an individual pension plan for the purposes of Part LXXXIII of the Income Tax Regulations) </li>
 </ul>
-<p>You include this amount in the calculation of the maximum split pension amount on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1032.html">T1032, Joint Election to Split Pension Income</a>, <strong>if you are age 65 or more at the end of the calendar year and are electing to split your eligible pension income with your spouse or common-law partner.</strong></p>
+<p>You must include this amount in the calculation of the maximum split pension amount on Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1032.html">T1032, Joint Election to Split Pension Income</a>, <strong>if you are age 65 or more at the end of the calendar year and are electing to split your eligible pension income with your spouse or common-law partner.</strong></p>
 </details>
 
 <details><summary>Box 18 &ndash; Selling price of an interest in the RCA</summary>
-<p>If you bought an interest in the RCA, enter the amount you paid to the recipient for the interest in the RCA (the purchase recipient price before you withheld 50% tax).</p>
+<p>Report the amount you paid to the recipient for the interest in the RCA (the purchase recipient price before you withheld 50% tax) if you bought an interest in the RCA.</p>
 </details>
 
 <details><summary>Box 20 &ndash; Other amounts </summary>
-<p>Complete box 20 if the RCA trust:</p>
+<p>Report the amount if the RCA trust:</p>
 
  <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Disposed of property for consideration less than the fair market value (FMV) of the property </li>
