--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -754,7 +754,7 @@
             <section class="mrgn-tp-md" id="details-elements">
 	<details>
             <summary id="yr">Year</summary>
-            <p>Enter the 4 digits of the calendar year in which you paid the remuneration to the employee.</p>
+            <p>Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
             </details>
 
             <details>
