--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -395,15 +395,15 @@
                     <summary>Box 018 – Lump-sum payments</summary>
         <p>Report the amount for the taxable portion of a <strong>single payment</strong> out of a:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm ">
+<ul class="list-unstyled cnjnctn-type-or ">
  <li class="cnjnctn-col">Pension fund or plan including any single payment resulting from a:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm ">
+<ul class="list-unstyled cnjnctn-type-or">
  <li class="cnjnctn-col">Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
 <li class="cnjnctn-col">Termination of, amendment to, or modification of the plan</li>
 <li class="cnjnctn-col">Reimbursement of any over-contributions to the plan</li>
 </ul></li>
  <li class="cnjnctn-col">Deferred profit sharing plan (DPSP) including a single payment due to a:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm ">
+<ul class="list-unstyled cnjnctn-type-or">
  <li class="cnjnctn-col">Withdrawal from the plan</li>
  <li class="cnjnctn-col">Retirement from employment</li>
  <li class="cnjnctn-col">Death of an employee or former employee</li>
